calculate with formula

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="calculate.js"></script>
     <script>
         [
-            {id:"e", placeholder: "eccentricity", label: "eccentricity", formula:":e = :c / :a"},
+            {id:"e", placeholder: "eccentricity", label: "eccentricity", formula:" c / a "},
             {id:"p", placeholder: "semi-latus rectum", label: "semi-latus rectum"},
             {id:"µ", placeholder: "Standard gravitational parameter [m^3 s^−2]", label: "µ"},
             {id:"h", placeholder: "[m]", label: "angular momentum |h|"},
