--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             {id:"e", placeholder: "eccentricity", label: "eccentricity", formulas:[" c / a ", "Math.sqrt(1+2* E * h * h /( µ * µ ))"]},
             {id:"p", placeholder: "semi-latus rectum", label: "semi-latus rectum", formulas: [" a *(1- e *2)"]},
             {id:"µ", placeholder: "Standard gravitational parameter [m^3 s^−2]", label: "µ", formulas: ["6.67430e-11* M "]},
-            {id:"h", placeholder: "[m]", label: "angular momentum |h|", formulas: [" r * v *Math.sin( angle_r_v )"]},
+            {id:"h", placeholder: "[m]", label: "angular momentum |h|", formulas: [" r * v *Math.sin( angle_r_v )", "Math.sqrt( h0 * h0 + h1 * h1 + h2 * h2 )"]},
             {id:"apogee", placeholder: "[m]", label: "r apogee", formulas: [" a *(1+ e )"]},
             {id:"perigee", placeholder: "[m]", label: "r perigee", formulas: [" a *(1- e )"]},
             {id:"period", placeholder: "period of the orbit", label: "period of the orbit", formulas: ["2*Math.PI*( apogee /Math.sqrt( µ ))"]},
@@ -39,7 +39,7 @@
             {id:"a", placeholder: "semi-major axis", label: "semi-major axis a", formulas: ["( apogee + perigee )/2", " c / e "]},
             {id:"E", placeholder: "[m²/sec²]", label: "energy E", formulas: ["- µ /(2* a )", " v * v /2- µ / r "]},
             {id:"v", placeholder: "[m/sec]", label: "|speed|", formulas:["Math.sqrt( v0 * v0 + v1 * v1 + v2 * v2 )"]},
-            {id:"r", placeholder: "[m]", label: "|position|"},
+            {id:"r", placeholder: "[m]", label: "|position|", formulas:["Math.sqrt( pos0 * pos0 + pos1 * pos1 + pos2 * pos2 )"]},
             {id:"angle_r_v", placeholder: "rad", label: "angle between v and position"}
     ];
     
