--- a/ellipse.html
+++ b/ellipse.html
@@ -19,7 +19,7 @@
     <script>
         const col1Elements = [
             {id:"e", placeholder: "eccentricity", label: "eccentricity", formulas:[" c / a "]},
-            {id:"l", placeholder: "semi-latus rectum", label: "semi-latus rectum", formulas: [" a *(1- e *2)"]},
+            {id:"l", placeholder: "semi-latus rectum", label: "semi-latus rectum", formulas: [" a *(1- e *2)", "2* b * b / a "]},
             {id:"d", placeholder: "directrix", label: "directrix", formulas:[" a * a / c "," a / e "]}
     ];
 
