--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script>
         const col1Elements = [
             {id:"e", placeholder: "eccentricity", label: "eccentricity", formulas:[" c / a ", "Math.sqrt(1+2* E * h * h /( µ * µ ))"]},
-            {id:"p", placeholder: "semi-latus rectum", label: "semi-latus rectum", formulas: [" a *(1- e *2)"]},
+            {id:"p", placeholder: "semi-latus rectum", label: "semi-latus rectum", formulas: [" a *(1- e *2)", "2* b * b / a "]},
             {id:"µ", placeholder: "Standard gravitational parameter [m^3 s^−2]", label: "µ", formulas: ["6.67430e-11* M "]},
             {id:"h", placeholder: "[m]", label: "angular momentum |h|", formulas: [" r * v *Math.sin( angle_r_v )", "Math.sqrt( h0 * h0 + h1 * h1 + h2 * h2 )"]},
             {id:"apogee", placeholder: "[m]", label: "r apogee", formulas: [" a *(1+ e )"]},
