--- a/ellipse.html
+++ b/ellipse.html
@@ -18,7 +18,7 @@
     <script src="calculate.js"></script>
     <script>
         const col1Elements = [
-            {id:"e", placeholder: "eccentricity", label: "eccentricity", formulas:[" c / a "]},
+            {id:"e", placeholder: "eccentricity", label: "eccentricity", formulas:[" c / a ", "Math.sqrt(1-( b * b )/( a * a ))"]},
             {id:"l", placeholder: "semi-latus rectum", label: "semi-latus rectum", formulas: [" a *(1- e *2)", "2* b * b / a "]},
             {id:"d", placeholder: "directrix", label: "directrix", formulas:[" a * a / c "," a / e "]}
     ];
